layout issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   display: flex;
   color: #3d3d3d;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .details-container .text-row svg {
@@ -42,35 +42,17 @@
 }
 
 .mainBox {
-  padding: 20px;
   align-items: center;
   display: flex;
   flex-flow: wrap;
 }
 
-.actions {
-  transition: all 0.4s;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  opacity: 0;
-  transform: translateY(-10px);
-}
 .actions a {
   color: #3d3d3d;
 }
 
 .actions a:hover {
   color: #000;
-}
-
-.actions svg {
-  font-size: 18px;
-}
-
-.boxWrapper:hover .actions {
-  opacity: 1;
-  transform: translateY(0px);
 }
 
 .drawer {
@@ -118,12 +100,42 @@
   transform: translateX(-50%);
 }
 
+.actions {
+  transition: all 0.4s;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+.actions svg {
+  font-size: 14px;
+}
+
 @media screen and (min-width: 768px) {
   .boxWrapper {
     width: calc(50% - 15px);
   }
   .drawer form {
     width: 300px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .actions svg {
+    font-size: 18px;
+  }
+  .details-container .text-row {
+    font-size: 14px;
+  }
+  .boxWrapper:hover .actions {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  .mainBox {
+    padding: 20px;
+  }
+  .actions {
+    opacity: 0;
+    transform: translateY(-10px);
   }
 }
 
